<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="me.worric.databindingplayground.MainViewModel" />
        <variable
            name="clickListener"
            type="me.worric.databindingplayground.MainFragment.ClickListener" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingBottom="?attr/actionBarSize"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/et_input_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_main_input_text"
                android:inputType="text"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_process_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{clickListener::onProcessTextClicked}"
                android:text="@string/btn_label_main_process_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_input_text" />

            <TextView
                android:id="@+id/tv_output_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/white"
                android:text="@{viewmodel.outputText}"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_process_text"
                app:layout_constraintWidth_percent="0.8"
                tools:text="Test text" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_50p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <Button
                android:id="@+id/btn_trigger_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/btn_label_main_press_me"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guide_50p"
                android:onClick="@{clickListener::onNotificationButtonClicked}"/>

            <ImageView
                android:id="@+id/iv_coffee_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/content_desc_main_coffee_icon"
                android:src="@drawable/ic_local_drink" />

            <TextView
                android:id="@+id/tv_coffee_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toTopOf="@+id/iv_coffee_icon"
                app:layout_constraintStart_toEndOf="@+id/iv_coffee_icon"
                android:text="@{viewmodel.coffee.name ?? @string/error_msg_main_no_coffee_chosen}" />

            <TextView
                android:id="@+id/tv_coffee_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_coffee_icon"
                app:layout_constraintStart_toEndOf="@+id/iv_coffee_icon"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:text="@{String.valueOf(viewmodel.coffee.number) ?? @string/error_msg_main_no_coffee_chosen}" />

            <Button
                android:id="@+id/btn_fetch_coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/btn_label_main_fetch_coffee"
                android:onClick="@{() -> viewmodel.fetchCoffee()}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
